--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/fontawesome6": "^12.3.0",
+    "@react-native/new-app-screen": "0.84.0",
+    "@react-navigation/native": "^7.1.28",
+    "apisauce": "^3.2.2",
     "react": "19.2.3",
     "react-native": "0.84.0",
-    "@react-native/new-app-screen": "0.84.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.23.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
