--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "react-native start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:openHandles": "jest --detectOpenHandles"
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.16.3",
@@ -18,6 +19,7 @@
     "@react-navigation/native-stack": "^7.12.0",
     "@tanstack/react-query": "^5.90.21",
     "apisauce": "^3.2.2",
+    "nock": "^14.0.11",
     "react": "19.2.3",
     "react-native": "0.84.0",
     "react-native-gesture-handler": "^2.30.0",
